--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Time, Space, and Complexity</h1>
+	<p>Time Complexity, including the words 'Time complexity' and 'efficient.'</p>
+	<p>words <b>Space Complexity</b> and 'O(n).'</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
